# thittam

./: .astylerc  .dir-locals.el  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  format-code.sh  run_before_commit_astyle.sh  stool  waf  wscript
UML/: dummy.uml  resource-manager.uml
design/: overall-class-diagram.dia  resource-manager-classes.dia  resource-manager.uml  scene-graph.dia
gmock/: wscript
googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest/googlemock/include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-generated-actions.h  gmock-generated-function-mockers.h  gmock-generated-matchers.h  gmock-generated-nice-strict.h  gmock-matchers.h  gmock-more-actions.h  gmock-more-matchers.h  gmock-spec-builders.h  gmock.h
googletest/googlemock/include/gmock/internal/: gmock-generated-internal-utils.h  gmock-internal-utils.h
googletest/googlemock/test/: gmock_link_test.h
googletest/googletest/include/gtest/: gtest-death-test.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h
googletest/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-linked_ptr.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-tuple.h  gtest-type-util.h
googletest/googletest/samples/: prime_tables.h  sample1.h  sample2.h  sample3-inl.h  sample4.h
googletest/googletest/src/: gtest-internal-inl.h
googletest/googletest/test/: gtest-typed-test_test.h  production.h
googletest/googletest/xcode/Samples/FrameworkSample/: widget.h
src/: CMakeLists.txt  Makefile  _namespace.h  app.h  app_impl.cxx  app_impl.h  cmake_install.cmake  common.cxx  common.h  config.h  config_impl.cxx  config_impl.h  error.h  gantt-controller.h  gantt-controller_impl.cxx  gantt-controller_impl.h  gantt-view.cxx  gantt-view.h  gantt-view_impl.cxx  gantt-view_impl.h  interfaces.gresources.c  interfaces.gresources.xml  latex.h  latex_impl.cxx  latex_impl.h  log.cxx  log.h  main-controller.h  main-controller_impl.cxx  main-controller_impl.h  main-view.h  main-view_impl.cxx  main-view_impl.h  main.cxx  project-controller.h  project-controller_impl.cxx  project-controller_impl.h  project-factory.h  project-factory_impl.cxx  project-factory_impl.h  (+86 more)
src/resources/: gantt-view.glade  interfaces.gresources.xml  main-view.glade  main.glade  project-view.glade  req-form.glade  resource-group-view.glade  resource-usage-view.glade  resource-view.glade  resources-view.glade  wbs-tree-view.glade  wbs-view.glade
src/scene/: _namespace.h  box-item.cxx  box-item.h  graph.cxx  graph.h  item.h
tests/: CMakeLists.txt  main.cxx  test_config.cxx  test_req-tree.cxx  test_util.cxx  wscript
